EMBCESSMOD-4604 : Given a fix for Unable to scroll down on mobile device after registration

--- a/responders/src/UI/embc-responder/src/app/shared/components/dialog-components/bcsc-invite-dialog/bcsc-invite-dialog.component.scss
+++ b/responders/src/UI/embc-responder/src/app/shared/components/dialog-components/bcsc-invite-dialog/bcsc-invite-dialog.component.scss
@@ -25,3 +25,7 @@ a:hover {
 .field-error {
   color: red;
 }
+
+::ng-deep .mat-dialog-content {
+  overflow: revert !important;
+}
